Fix style of hamburger icon on mobile view

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -66,10 +66,12 @@ body > header {
 
 body #main-nav:before {
   content: '\2630';
-  position: fixed;
-  top: 1rem;
-  right: 1rem;
-  font-size: 3rem;
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 2rem;
+  padding: 1.2rem 1.6rem;
+  height: 5rem;
 }
 
 body header #main-nav ul {
@@ -93,6 +95,7 @@ body.menu-mobile-active #main-nav ul {
   left: 0;
   width: 100%;
   height: 100vh;
+  overflow-y: scroll;
 }
 
 body.menu-mobile-active #main-nav ul li {
